syntax = "proto3";

package matcher_proto;

message Book {
  uint64 id = 1;
}

message CreateBook {
  Book book = 1;
}

message CreateOrder {
  uint64 book_id = 1;
}

message Action {
  oneof action {
    CreateBook create_book = 1;
    CreateOrder create_order = 2;
  }
}
